Contest: support last affecting penalty from two contest days (#778)