@@ -58,13 +58,19 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                 new ContestContestant.Builder().userJid("c1").build(),
                 new ContestContestant.Builder().userJid("c2").contestStartTime(Instant.ofEpochSecond(300)).build());
 
+        private Map<String, Set<ContestContestant>> contestContestantsMap = Map.of(
+                contest.getJid(), contestants);
+
+        private Map<String, Instant> contestBeginTimesMap = Map.of(
+                contest.getJid(), contest.getBeginTime());
+
+        private Map<String, ScoringConfig> problemScoringConfigsMap = Map.of(
+                "p1", ScoringConfig.DEFAULT,
+                "p2", ScoringConfig.DEFAULT);
+
         private Map<String, Profile> profilesMap = ImmutableMap.of(
                 "c1", new Profile.Builder().username("c1").build(),
                 "c2", new Profile.Builder().username("c2").build());
-
-        private Map<String, ScoringConfig> scoringConfigsMap = Map.of(
-                "p1", ScoringConfig.DEFAULT,
-                "p2", ScoringConfig.DEFAULT);
 
         @Test
         void time_calculation() {
@@ -76,16 +82,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                     createSubmission(5, 900, "c2", "p1", 100, Verdict.ACCEPTED));
 
             ScoreboardProcessResult result = scoreboardProcessor.process(
-                    contest,
                     state,
                     Optional.empty(),
                     styleModuleConfig,
-                    contestants,
+                    contestContestantsMap,
+                    contestBeginTimesMap,
+                    Map.of(),
+                    problemScoringConfigsMap,
                     profilesMap,
-                    scoringConfigsMap,
                     submissions,
-                    ImmutableList.of(),
-                    Map.of());
+                    List.of());
 
             assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                     new GcjScoreboardEntry.Builder()
@@ -127,16 +133,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
             @Test
             void base_case() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -178,16 +184,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -230,16 +236,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         createSubmission(2, 900, "c2", "p2", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -279,16 +285,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         createSubmission(2, 900, "c1", "p1", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -331,6 +337,9 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                                 .build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
+                contestContestantsMap = Map.of(
+                        contest.getJid(), contestants);
+
                 profilesMap = ImmutableMap.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
@@ -341,16 +350,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         createSubmission(2, 900, "c2", "p1", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -404,6 +413,9 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         new ContestContestant.Builder().userJid("c2").build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
+                contestContestantsMap = Map.of(
+                        contest.getJid(), contestants);
+
                 profilesMap = ImmutableMap.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
@@ -415,16 +427,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         createSubmission(3, 900, "c3", "p2", 0, Verdict.WRONG_ANSWER));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -474,7 +486,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
         @Nested
         class PendingAfterFreeze {
-            private Map<String, Instant> freezeTimesMap = Map.of(contest.getJid(), Instant.ofEpochSecond(500));
+            private Map<String, Instant> contestFreezeTimesMap = Map.of(contest.getJid(), Instant.ofEpochSecond(500));
 
             private List<Submission> baseSubmissions = ImmutableList.of(
                     createSubmission(1, 100, "c1", "p1", 100, Verdict.ACCEPTED),
@@ -484,16 +496,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
             @Test
             void no_pending() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         baseSubmissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -534,16 +546,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -584,16 +596,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -634,16 +646,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
                         new GcjScoreboardEntry.Builder()
@@ -715,16 +727,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
             @Test
             void empty_initial_incremental_content() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new GcjScoreboardIncrementalContent.Builder()
                         .lastSubmissionId(9)
@@ -744,16 +756,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
             @Test
             void empty_new_submissions() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.of(incrementalContent),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
-                        ImmutableList.of(),
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of(),
+                        List.of());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new GcjScoreboardIncrementalContent.Builder()
                         .from(incrementalContent)
@@ -764,16 +776,16 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
             @Test
             void existing_incremental_content() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.of(incrementalContent),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new GcjScoreboardIncrementalContent.Builder()
                         .lastSubmissionId(9)
