@@ -58,13 +58,19 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                 new ContestContestant.Builder().userJid("c1").build(),
                 new ContestContestant.Builder().userJid("c2").contestStartTime(Instant.ofEpochSecond(300)).build());
 
+        private Map<String, Set<ContestContestant>> contestContestantsMap = Map.of(
+                contest.getJid(), contestants);
+
+        private Map<String, Instant> contestBeginTimesMap = Map.of(
+                contest.getJid(), contest.getBeginTime());
+
+        private Map<String, ScoringConfig> problemScoringConfigsMap = Map.of(
+                "p1", ScoringConfig.DEFAULT,
+                "p2", ScoringConfig.DEFAULT);
+
         private Map<String, Profile> profilesMap = ImmutableMap.of(
                 "c1", new Profile.Builder().username("c1").build(),
                 "c2", new Profile.Builder().username("c2").build());
-
-        private Map<String, ScoringConfig> scoringConfigsMap = Map.of(
-                "p1", ScoringConfig.DEFAULT,
-                "p2", ScoringConfig.DEFAULT);
 
         @Test
         void time_calculation() {
@@ -80,16 +86,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                     createSubmission(9, 920, "c2", "p1", 100, Verdict.COMPILATION_ERROR));
 
             ScoreboardProcessResult result = scoreboardProcessor.process(
-                    contest,
                     state,
                     Optional.empty(),
                     styleModuleConfig,
-                    contestants,
+                    contestContestantsMap,
+                    contestBeginTimesMap,
+                    Map.of(),
+                    problemScoringConfigsMap,
                     profilesMap,
-                    scoringConfigsMap,
                     submissions,
-                    ImmutableList.of(),
-                    Map.of());
+                    List.of());
 
             assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                     new TrocScoreboardEntry.Builder()
@@ -131,16 +137,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
             @Test
             void base_case() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -182,16 +188,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -234,16 +240,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         createSubmission(2, 900, "c2", "p2", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -283,16 +289,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         createSubmission(2, 900, "c1", "p1", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -335,6 +341,9 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                                 .build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
+                contestContestantsMap = Map.of(
+                        contest.getJid(), contestants);
+
                 profilesMap = ImmutableMap.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
@@ -345,16 +354,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         createSubmission(2, 900, "c2", "p1", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -408,6 +417,9 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         new ContestContestant.Builder().userJid("c2").build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
+                contestContestantsMap = Map.of(
+                        contest.getJid(), contestants);
+
                 profilesMap = ImmutableMap.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
@@ -419,16 +431,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         createSubmission(3, 900, "c3", "p2", 0, Verdict.WRONG_ANSWER));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -478,7 +490,7 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
         @Nested
         class PendingAfterFreeze {
-            private Map<String, Instant> freezeTimesMap = Map.of(contest.getJid(), Instant.ofEpochSecond(500));
+            private Map<String, Instant> contestFreezeTimesMap = Map.of(contest.getJid(), Instant.ofEpochSecond(500));
 
             private List<Submission> baseSubmissions = ImmutableList.of(
                     createSubmission(1, 100, "c1", "p1", 100, Verdict.ACCEPTED),
@@ -488,16 +500,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
             @Test
             void no_pending() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         baseSubmissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -538,16 +550,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -588,16 +600,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -638,16 +650,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        contestFreezeTimesMap,
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        freezeTimesMap);
+                        List.of());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (TrocScoreboardEntry) e)).containsExactly(
                         new TrocScoreboardEntry.Builder()
@@ -720,16 +732,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
             @Test
             void empty_initial_incremental_content() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.empty(),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new TrocScoreboardIncrementalContent.Builder()
                         .lastSubmissionId(9)
@@ -751,16 +763,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
             @Test
             void empty_new_submissions() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.of(incrementalContent),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
-                        ImmutableList.of(),
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of(),
+                        List.of());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new TrocScoreboardIncrementalContent.Builder()
                         .from(incrementalContent)
@@ -771,16 +783,16 @@ class TrocScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
             @Test
             void existing_incremental_content() {
                 ScoreboardProcessResult result = scoreboardProcessor.process(
-                        contest,
                         state,
                         Optional.of(incrementalContent),
                         styleModuleConfig,
-                        contestants,
+                        contestContestantsMap,
+                        contestBeginTimesMap,
+                        Map.of(),
+                        problemScoringConfigsMap,
                         profilesMap,
-                        scoringConfigsMap,
                         submissions,
-                        ImmutableList.of(),
-                        Map.of());
+                        List.of());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new TrocScoreboardIncrementalContent.Builder()
                         .lastSubmissionId(9)
